--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -351,14 +351,17 @@ header menu ul li:hover {
     font-weight: 500;
 }
 
-.modal .card {
+.modal .card{
     margin-top: 20px;
-    display: grid;
-    grid-template-columns: 1fr 10fr;
     box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.26);
     padding: 20px;
     border-radius: 5px;
     position: relative;
+}
+
+.modal .card section {
+    display: grid;
+    grid-template-columns: 1fr 10fr;
 }
 
 .modal .card div:nth-child(1) input{
@@ -406,3 +409,45 @@ header menu ul li:hover {
     margin-left: 5px;
 }
 
+.modal .card div:nth-child(2) .middle p {
+    font-size: 16px;
+    color: #7a7a7a;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.modal .card .bottom {
+    margin-top: 20px;
+    width: 100%;
+    padding: 30px 0;
+    border-top: 1px solid #695e5e6c;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.modal .card .bottom span:nth-child(2) {
+    padding: 10px 23px;
+    border: 1px solid #695e5e8c;
+    color: black;
+    border-radius: 20px;
+    transform: translateX(100%);
+}
+
+.modal .card .bottom span:nth-child(2) i {
+    font-style: normal;
+    color: #695e5eb2;
+    position: relative;
+    left: -5px;
+}
+
+.modal .card .bottom button {
+    padding: 10px 23px;
+    border: 1px solid #695e5e8c;
+    background-color: #3cb4ac;
+    color: white;
+    font-weight: 700;
+    margin-left: 10px;
+    border-radius: 20px;
+}
