--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -308,6 +308,17 @@ header menu ul li:hover {
 
 /*=-=-=-=-= Modal =-=-=-=-= */
 
+.background {
+    width: 100%;
+    height: 350vh;
+    background-color: rgba(124, 124, 124, 0.253);
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
 .modal {
     width: 650px;
     padding: 60px 50px 50px;
@@ -319,16 +330,6 @@ header menu ul li:hover {
     top: 200px;
     left: 0;
     right: 0;
-}
-
-.background {
-    width: 100%;
-    height: 350vh;
-    background-color: rgba(124, 124, 124, 0.253);
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left: 0;
 }
 
 .modal .exit {
