--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -316,7 +316,7 @@ header menu ul li:hover {
     margin: auto;
     top: 0;
     left: 0;
-    /* display: none; */
+    display: none;
 }
 
 .modal {
@@ -473,6 +473,17 @@ header menu ul li:hover {
 
 /* =-=-=-= Success modal =-=-=-= */
 
+.background2 {
+    width: 100%;
+    height: 350vh;
+    background-color: rgba(124, 124, 124, 0.253);
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
 .success-modal {
     width: 450px;
     height: 450px;
@@ -513,4 +524,6 @@ header menu ul li:hover {
     color: white;
     font-weight: 700;
     font-size: 16px;
+    outline: none;
+    cursor: pointer;
 }
