--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -389,6 +389,10 @@ header menu ul li:hover {
     transition: all 0.3s;
 }
 
+.modal .card div:nth-child(2):hover .top h3 {
+    color: #3cb4ac;
+}
+
 .modal .card div:nth-child(2) .top span {
     font-size: 16px;
     color: #3cb4ac;
