--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -594,8 +594,6 @@ header menu ul li:hover {
         cursor: pointer;
         user-select: none;
     }
-
-    
     
     header menu ul li {
         color: #505050;
@@ -660,15 +658,29 @@ header menu ul li:hover {
         padding: 20px 0;
     }
 
-    .container .contributions .values div span:nth-child(1) {
-        font-size: 35px;
-        font-weight: 700;
+    /* =-=-=-=-= About =-=-=-=-= */
+    
+    .container .about .card .top {
+        display: block;
+        margin-bottom: 20px;
+
+    }
+    
+    .container .about .card .top h1 {
+        font-size: 16px;
         margin-bottom: 5px;
     }
-
-    .container .contributions .values div span:nth-child(2) {
-        font-size: 15px;
-        color: #7a7a7a;
-        font-weight: 400;
+    
+    .container .about .card .top span {
+        font-size: 13px;
+    }
+    
+    .container .about .card .bottom {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .container .about .card .bottom h3 {
+        margin-bottom: 15px;
     }
 }
