--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -683,4 +683,131 @@ header menu ul li:hover {
     .container .about .card .bottom h3 {
         margin-bottom: 15px;
     }
+
+    /* =-=-=-=-= Modal =-=-=-=-= */
+
+    .modal {
+        width: 300px;
+    }
+    
+    
+    .modal .card section {
+        display: block;
+        position: relative;
+        height: 260px;
+    }
+    
+    .modal .card div:nth-child(1) input{
+        width: 20px;
+        height: 20px;
+        position: relative;
+        margin: auto;
+        left: 5px;
+        top: 5px;
+    }
+    
+    .modal .card div:nth-child(2) .top {
+        display: block;
+
+    } 
+
+    .modal .cards .card:nth-child(2) div:nth-child(2) .top h3:nth-child(1) {
+        position: absolute;
+        top: 5px;
+        left: 40px;
+        color: tomato;
+    }
+
+    .modal .cards .card:nth-child(2) div:nth-child(2) .top h3:nth-child(3) span {
+        top: 0;
+    }
+
+    .modal .cards .card:nth-child(2) div:nth-child(2) .top span {
+        font-size: 15px;
+        position: relative;
+        top: 10px;
+    }
+    
+    .modal .card div:nth-child(2) .top h3:nth-child(1) {
+        position: absolute;
+        top: -2px;
+        left: 40px;
+    }
+    
+    .modal .card div:nth-child(2) .top span {
+        font-size: 14px;
+        position: relative;
+        top: 20px;
+        left: -10px;
+    }
+    
+    .modal .card div:nth-child(2) .top h3:nth-child(3) {
+        position: absolute;
+        left: 5px;
+        top: 230px;
+    }
+
+    .modal .card div:nth-child(2) .top h3:nth-child(3) span {
+        position: relative;
+        top: 0;
+        left: 3px;
+    }
+    
+    .modal .card div:nth-child(2) .middle p {
+        margin-top: 30px;
+    }
+    
+    .modal .card .bottom {
+        margin-top: 55px;
+        width: 100%;
+        height: 100px;
+        display: none;
+    }
+    
+    .modal .card .bottom span:nth-child(2) {
+        padding: 10px 23px;
+        border: 1px solid #695e5e8c;
+        color: black;
+        border-radius: 20px;
+        transform: translateX(0);
+    }
+    
+    .modal .card .bottom span:nth-child(2) i {
+        font-style: normal;
+        color: #695e5eb2;
+        position: relative;
+        left: -5px;
+    }
+    
+    .modal .card .bottom button {
+        padding: 10px 23px;
+        border: 1px solid #695e5e8c;
+        background-color: #3cb4ac;
+        color: white;
+        font-weight: 700;
+        margin-left: 10px;
+        border-radius: 20px;
+        outline: none;
+        transition: all .3s;
+        cursor: pointer;
+    }
+    
+    .modal .card .bottom button:hover {
+        background-color: #35948e;
+    }
+    
+    
+    .modal .disable {
+        opacity: 70%;
+        user-select: none;
+        cursor: not-allowed;
+    }
+    
+    .modal .disable input {
+        pointer-events: none;
+    }
+    
+    .modal .disable div:nth-child(2):hover .top h3 {
+        color: #424242;
+    }
 }
