--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -758,18 +758,24 @@ header menu ul li:hover {
     }
     
     .modal .card .bottom {
-        margin-top: 55px;
+        margin-top: 20px;
         width: 100%;
         height: 100px;
-        display: none;
+        display: flex;
+        flex-direction: column;
+        position: relative;
     }
+
+    .modal .card .bottom span:nth-child(1) {
+        position: absolute;
+        top: 5px;
+    } 
     
     .modal .card .bottom span:nth-child(2) {
         padding: 10px 23px;
-        border: 1px solid #695e5e8c;
-        color: black;
-        border-radius: 20px;
-        transform: translateX(0);
+        position: absolute;
+        top: 50px;
+        left: -85px;
     }
     
     .modal .card .bottom span:nth-child(2) i {
@@ -780,16 +786,10 @@ header menu ul li:hover {
     }
     
     .modal .card .bottom button {
-        padding: 10px 23px;
-        border: 1px solid #695e5e8c;
-        background-color: #3cb4ac;
-        color: white;
-        font-weight: 700;
-        margin-left: 10px;
-        border-radius: 20px;
-        outline: none;
-        transition: all .3s;
-        cursor: pointer;
+        padding: 10px 15px;
+        position: absolute;
+        top: 50px;
+        right: -10px;
     }
     
     .modal .card .bottom button:hover {
