--- a/Project 14 - Crowdfunding page/style.css
+++ b/Project 14 - Crowdfunding page/style.css
@@ -107,7 +107,7 @@ header menu ul li:hover {
 .container .project .btn {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .container .project .btn button {
