--- a/Project 16 - Social media dashboard with theme switcher/style.css
+++ b/Project 16 - Social media dashboard with theme switcher/style.css
@@ -15,6 +15,8 @@
     --lighttext: #8b97c6;
     --text: #ffffff;
 
+    --switch: linear-gradient(90deg, #378fe6 0%, #3eda82 100%);
+
     /* Primary colors */
     --profit: #1db489;
     --loss: #dc414c;
@@ -57,4 +59,57 @@ body {
     font-size: 14px;
     color: var(--lighttext);
     letter-spacing: 2px;
+    font-weight: 700;
+}
+
+.container header .left-side {
+    position: relative;
+}
+
+.container header .left-side span {
+    color: var(--lighttext);
+    font-weight: 700;
+    margin-right: 10px;
+}
+
+.container header .left-side input {
+    opacity: 0;
+    height: 0;
+    width: 0;
+}
+
+.container header .left-side .switch {
+    position: relative;
+}
+
+.container header .left-side .switch .slider {
+    position: absolute;
+    height: 26px;
+    width: 50px;
+    background: var(--switch);
+    border-radius: 25px;
+    cursor: pointer;
+    transform: translateY(-2px);
+}
+
+.container header .left-side .switch .slider::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: var(--bg);
+    border-radius: 50%;
+    transition: .3s;
+
+}
+
+.container header .left-side .switch  input:checked + .slider {
+    background: #aeb3cb;
+}
+
+.container header .left-side .switch  input:checked + .slider::before {
+    transform: translateX(-22px);
+    background-color: #FFF;
 }
