--- a/Project 16 - Social media dashboard with theme switcher/style.css
+++ b/Project 16 - Social media dashboard with theme switcher/style.css
@@ -21,10 +21,10 @@
     --profit: #1db489;
     --loss: #dc414c;
 
-    --facebook: hsl(208, 92%, 53%)
-    --Twitter: hsl(203, 89%, 53%)
-    --instagram: linear-gradient(90deg, #fdc468 0%, #df4996 100%)
-    --youTube: hsl(348, 97%, 39%)
+    --facebook: #198ff5;
+    --Twitter: #1ca0f2;
+    --instagram: linear-gradient(90deg, #fdc468 0%, #df4996 100%);
+    --youTube: #c4032a;
 }
 
 body {
@@ -38,11 +38,12 @@ body {
     width: 75%;
 }
 
+/* =-=-=-= Header -=-=-=-= */
 .container header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 25px 0;
 }
 
 .container header .right-side {
@@ -112,4 +113,136 @@ body {
 .container header .left-side .switch  input:checked + .slider::before {
     transform: translateX(-22px);
     background-color: #FFF;
+}
+
+/* =-=-=-= Cards =-=-=-=-= */
+.container .socialMediaCards {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 25px;
+}
+
+.container .socialMediaCards .card {
+    width: 250px;
+    height: 250px;
+    background-color: var(--cardbg);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+}
+
+.container .socialMediaCards .card::after {
+    content: "";
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    top: 0;
+} 
+
+.container .socialMediaCards .card.fb::after {
+    background: var(--facebook);
+} 
+.container .socialMediaCards .card.tt::after {
+    background: var(--Twitter);
+} 
+.container .socialMediaCards .card.insta::after {
+    background: var(--instagram);
+} 
+.container .socialMediaCards .card.yt::after {
+    background: var(--youTube);
+} 
+
+/* =-=-= set icons =-=-= */
+.fb-icon, .tt-icon, .insta-icon, .yt-icon {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-size: cover;
+    background-repeat: none;
+    border-radius: 3px;
+}
+
+.fb-icon {
+    background-image: url(assets/images/icon-facebook.svg);
+}
+
+.tt-icon {
+    background-image: url(assets/images/icon-twitter.svg);
+    width: 25px;
+}
+
+.insta-icon {
+    background-image: url(assets/images/icon-instagram.svg);
+}
+
+.yt-icon {
+    background-image: url(assets/images/icon-youtube.svg);
+}
+
+.icon {
+    display: inline-block;
+    width: 7px;
+    height: 7px;
+    background-size: cover;
+    background-repeat: none;
+}
+
+.icon.profit {
+    background-image: url(assets/images/icon-up.svg);
+    transform-origin: center;
+    transform: rotate(-135deg) translateY(-2px);
+}
+
+.icon.loss {
+    background-image: url(assets/images/icon-down.svg);
+    transform-origin: center;
+    transform: rotate(135deg) translateY(2px);
+}
+
+.container .socialMediaCards .card .tag {
+    display: flex;
+    gap: 10px;
+    color: var(--lighttext);
+}
+
+.container .socialMediaCards .card .followers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container .socialMediaCards .card .followers h1 {
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.container .socialMediaCards .card .followers span {
+    font-size: 14px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: var(--lighttext);
+    font-weight: 400;
+}
+
+.container .socialMediaCards .card .today {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    font-weight: 700;
+    font-size: 12px;
+}
+
+.container .socialMediaCards .card .today.profit span{
+    color: var(--profit);
+}
+
+.container .socialMediaCards .card .today.loss span{
+    color: var(--loss);
 }
