--- a/Project 17 - Todo App/style.css
+++ b/Project 17 - Todo App/style.css
@@ -16,3 +16,48 @@
     --semilighttext: hsl(233, 14%, 35%);
     --darktext: hsl(237, 14%, 26%);
 }
+
+body {
+    height: 100vh;
+    display: flex;
+    background-color: var(--bg);
+    align-items: center;
+    justify-content: center;
+}
+
+.bg {
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    background-image: url(assets/images/bg-desktop-dark.jpg);
+    background-repeat: no-repeat;
+    top: 0;
+    z-index: -1;
+}
+
+.todoApp {
+    width: 450px;
+    height: 500px;
+}
+
+.todoApp header {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.todoApp header h1 {
+    color: var(--texthover);
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+}
+
+.todoApp header button {
+    border: none;
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: transparent;
+
+}
